# azure-wiki-search-server

./: README.md  pyproject.toml
src/: azure_token_manager.py  edge_wiki.py
